revised gulp configurations. reworked some of the project structure. express server serving up Angular 2 app

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,13 +5,13 @@
 
 		<!-- Load Libraries -->
 		<!-- IE required polyfills, in exact order -->
-		<script src="lib/es6-shim.min.js"></script>
-	    <script src="lib/system-polyfills.js"></script>
-	    <script src="lib/angular2-polyfills.js"></script>
-	    <script src="lib/system.src.js"></script>
-	    <script src="lib/Rx.js"></script>
-	    <script src="lib/angular2.dev.js"></script>
-	    <script src="lib/router.dev.js"></script>
+		<script src="node_modules/es6-shim/es6-shim.min.js"></script>
+	    <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
+	    <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>   
+	    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+	    <script src="node_modules/systemjs/dist/system.src.js"></script>
+	    <script src="node_modules/rxjs/bundles/Rx.js"></script>
+	    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
 	    <!-- Configure SystemJS -->
 	    <script>
@@ -23,7 +23,7 @@
 	    			}
 	    		}
 	    	});
-	    	System.import('app/main')
+	    	System.import('app/boostrap')
 	    		  .then(null, console.error.bind(console));
 	    </script>
 	</head>
