--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Project Sauron</title>
+		<base href="/" />
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 
 		<!-- Load Libraries -->
@@ -12,10 +13,13 @@
 	    <script src="node_modules/systemjs/dist/system.src.js"></script>
 	    <script src="node_modules/rxjs/bundles/Rx.js"></script>
 	    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+	    <script src="node_modules/angular2/bundles/router.dev.js"></script>
+	    <script src="node_modules/angular2/bundles/http.dev.js"></script>
 
 	    <!-- Configure SystemJS -->
 	    <script>
 	    	System.config({
+	    		baseUrl: '/',
 	    		packages: {
 	    			app: {
 	    				format: 'register',
@@ -23,7 +27,7 @@
 	    			}
 	    		}
 	    	});
-	    	System.import('app/boostrap')
+	    	System.import('app/bootstrap')
 	    		  .then(null, console.error.bind(console));
 	    </script>
 	</head>
