fixed missing end tag

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -16,7 +16,7 @@
 	    <script src="node_modules/angular2/bundles/router.dev.js"></script>
 	    <script src="node_modules/angular2/bundles/http.dev.js"></script>
 
-	    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+	    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
 	    <!-- Configure SystemJS -->
 	    <script>
 	    	System.config({
