Added alot of stuff here. Settig up basic templated UI. Will probably change to angular material

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,8 +15,10 @@
 	    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 	    <script src="node_modules/angular2/bundles/router.dev.js"></script>
 	    <script src="node_modules/angular2/bundles/http.dev.js"></script>
+	    <script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.js"></script>
 
-	    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+	    <link rel="stylesheet" href="assets/bootstrap/bootstrap.css"/>
+	    <link rel="stylesheet" href="assets/main.css"/>
 	    <!-- Configure SystemJS -->
 	    <script>
 	    	System.config({
@@ -35,6 +37,6 @@
 
 	<!-- Display App -->
 	<body>
-		<sauron-app>Loading...</sauron-app>
+		<app>Loading...</app>
 	</body>
 </html>
