--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,10 +15,15 @@
 	    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 	    <script src="node_modules/angular2/bundles/router.dev.js"></script>
 	    <script src="node_modules/angular2/bundles/http.dev.js"></script>
-	    <script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.js"></script>
+	    <!-- <script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.js"></script> -->
 
-	    <link rel="stylesheet" href="assets/bootstrap/bootstrap.css"/>
-	    <link rel="stylesheet" href="assets/main.css"/>
+	    <script src="bower_components/jquery/dist/jquery.js"></script>
+		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+	    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+	    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
+	    <link rel="stylesheet" type="text/css" href="bower_components/rdash-ui/dist/css/rdash.css">
+	    <!-- <link rel="stylesheet" href="assets/main.css"/> -->
 	    <!-- Configure SystemJS -->
 	    <script>
 	    	System.config({
