WIP - filling out the dashboard mock

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -33,6 +33,9 @@
 	    				format: 'register',
 	    				defaultExtention: 'js'
 	    			}
+	    		},
+	    		map: {
+	    			'pimeng':'node_modules/primeng'
 	    		}
 	    	});
 	    	System.import('app/bootstrap')
