added mock table for lab reservations. added moment the he project. need to work on the clock

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -12,12 +12,13 @@
 	    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
 	    <script src="node_modules/systemjs/dist/system.src.js"></script>
 	    <script src="node_modules/chart.js/Chart.min.js"></script>
-	    
+	    <!-- <script src="node_modules/moment/moment.js"></script> -->
 	    
 	    <script src="node_modules/primeui/primeui-ng-all.min.js"></script>
 
 	    <script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
 
 
 		<link rel="stylesheet" type="text/css" href="node_modules/primeui/themes/delta/theme.css" />
@@ -41,7 +42,8 @@
 	    		map: {
 	    			'angular2':'node_modules/angular2',
 	    			'primeng':'node_modules/primeng',
-	    			'ng2-charts':'node_modules/ng2-charts'
+	    			'ng2-charts':'node_modules/ng2-charts',
+	    			'moment':'node_modules/moment'
 	    		}
 	    	});
 	    	System.import('app/bootstrap')
