--- a/src/client/index.html
+++ b/src/client/index.html
@@ -26,6 +26,7 @@
 	    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 	    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
 	    <link rel="stylesheet" type="text/css" href="bower_components/rdash-ui/dist/css/rdash.css">
+	    <!-- <link rel="stylesheet" type="text/css" href="bower_components/spinkit/css/spinkit.css"> -->
 	    <style> .chart {display: block; width: 100%;} </style> <!-- I don't know why this works -->
 
 	    <!-- <link rel="stylesheet" href="assets/main.css"/> -->
