added missing assets to git

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -25,7 +25,7 @@
 		<link rel="stylesheet" type="text/css" href="node_modules/primeui/primeui-ng-all.css" />
 	    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 	    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
-	    <link rel="stylesheet" type="text/css" href="./assets/rdash-ui/dist/css/rdash.css">
+	    <link rel="stylesheet" type="text/css" href="./assets/css/rdash.css">
 	    <!-- <link rel="stylesheet" type="text/css" href="bower_components/spinkit/css/spinkit.css"> -->
 	    <style> .chart {display: block; width: 100%;} </style> <!-- I don't know why this works -->
 
