--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,7 +14,7 @@
 	    <script src="node_modules/reflect-metadata/Reflect.js"></script>
 	    <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-	    <script src="systemjs.config.js"></script>
+	    <!-- <script src="systemjs.config.js"></script> -->
 
 
 	    <!-- Non-angular libraries -->
@@ -30,7 +30,53 @@
 	    <!-- <link rel="stylesheet" href="assets/main.css"/> -->
 	    <!-- Configure SystemJS -->
 	    <script>
-	    	System.import('app').catch(function(err){console.error(err);});
+	    		//map tells the System loader where to look for things
+			var map = {
+				// 'app': 'app', //=='dist',
+				'rxjs': 'node_modules/rxjs',
+				'angular2-in-memory-web-api': 'node_modules/angular2-in-memory-web-api',
+				'@angular': 'node_modules/@angular',
+				'moment':'node_modules/moment'
+			};
+
+			//packages tells the System loader how to load when no filename and/or no extension
+			var packages = {
+				'app': {defaultExtention: 'js'},
+				'rxjs': {defaultExtention: 'js'},
+				'angular2-in-memory-web-api': {defaultExtention: 'js'}
+			};
+
+			var packageNames = [
+				'@angular/common',
+			    '@angular/compiler',
+			    '@angular/core',
+			    '@angular/http',
+			    '@angular/platform-browser',
+			    '@angular/platform-browser-dynamic',
+			    '@angular/router',
+			    '@angular/router-deprecated',
+			    '@angular/testing',
+			    '@angular/upgrade',
+			];
+
+			// add package entries for angular packages in the form '@angular/common' :{ main: 'index.js', defaultExtension: 'js' }
+			 packageNames.forEach(function(pkgName) {
+			    packages[pkgName] = { main: 'index.js', defaultExtension: 'js' };
+			 });
+
+			 var config = {
+			 	baseUrl: '/',
+			 	defaultJSExtensions: true,
+			 	map: map,
+			 	packages: packages
+			 };
+
+			 // filterSystemConfig - index.html's chance to modify config before we register it.
+			 // if (global.filterSystemConfig) { global.filterSystemConfig(config); }
+
+			 System.config(config);
+	    	
+	    	System.import('app/bootstrap').catch(function(err){console.error(err);});
 	    </script>
 	    <!-- <script src="node_modules/rxjs/bundles/Rx.js"></script> -->
 	    <!-- <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
