--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,6 +8,7 @@
 		<!-- IE required polyfills, in exact order -->
 		<script src="node_modules/es6-shim/es6-shim.min.js"></script>
 	    <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
+	    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
 	    <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>   
 	    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
 	    <script src="node_modules/systemjs/dist/system.src.js"></script>
