latest version of ng2-charts working

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -11,6 +11,8 @@
 	    <script src="node_modules/zone.js/dist/zone.js"></script>
 	    <script src="node_modules/reflect-metadata/Reflect.js"></script>
 	    <script src="node_modules/systemjs/dist/system.src.js"></script>
+	    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
+	    <script src="node_modules/chart.js/dist/Chart.bundle.min.js"></script>
 
 	    <!-- <script src="systemjs.config.js"></script> -->
 
@@ -34,7 +36,8 @@
 				'rxjs': 'node_modules/rxjs',
 				'angular2-in-memory-web-api': 'node_modules/angular2-in-memory-web-api',
 				'@angular': 'node_modules/@angular',
-				'moment':'node_modules/moment'
+				'moment':'node_modules/moment',
+				'ng2-charts': 'node_modules/ng2-charts'
 			};
 
 			//packages tells the System loader how to load when no filename and/or no extension
