--- a/src/client/index.html
+++ b/src/client/index.html
@@ -23,7 +23,7 @@
 		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 	    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
-	    <link rel="stylesheet" type="text/css" href="./assets/css/rdash.css">
+	    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
 	    <!-- <link rel="stylesheet" type="text/css" href="bower_components/spinkit/css/spinkit.css"> -->
 	    <style> .chart {display: block; width: 100%;} </style> <!-- I don't know why this works -->
 
