--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,6 +10,7 @@
 	 
 	    <script src="node_modules/zone.js/dist/zone.js"></script>
 	    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+	    <script src="app/bundle.js"></script>
 	    <script src="node_modules/systemjs/dist/system.src.js"></script>
 	    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
 	    <script src="node_modules/chart.js/dist/Chart.bundle.min.js"></script>
@@ -24,65 +25,8 @@
 	    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 	    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
 	    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
-	    <!-- <link rel="stylesheet" type="text/css" href="bower_components/spinkit/css/spinkit.css"> -->
 	    <style> .chart {display: block; width: 100%;} </style> <!-- I don't know why this works -->
-
-	    <!-- <link rel="stylesheet" href="assets/main.css"/> -->
-	    <!-- Configure SystemJS -->
-	    <script>
-	    		//map tells the System loader where to look for things
-			var map = {
-				// 'app': 'app', //=='dist',
-				'rxjs': 'node_modules/rxjs',
-				'angular2-in-memory-web-api': 'node_modules/angular2-in-memory-web-api',
-				'@angular': 'node_modules/@angular',
-				'moment':'node_modules/moment',
-				'ng2-charts': 'node_modules/ng2-charts'
-			};
-
-			//packages tells the System loader how to load when no filename and/or no extension
-			var packages = {
-				'app': {defaultExtention: 'js'},
-				'rxjs': {defaultExtention: 'js'},
-				'angular2-in-memory-web-api': {defaultExtention: 'js'}
-			};
-
-			var packageNames = [
-				'@angular/common',
-			    '@angular/compiler',
-			    '@angular/core',
-			    '@angular/http',
-			    '@angular/platform-browser',
-			    '@angular/platform-browser-dynamic',
-			    '@angular/router',
-			    '@angular/router-deprecated',
-			    '@angular/testing',
-			    '@angular/upgrade',
-			];
-
-			// add package entries for angular packages in the form '@angular/common' :{ main: 'index.js', defaultExtension: 'js' }
-			 packageNames.forEach(function(pkgName) {
-			    packages[pkgName] = { main: 'index.js', defaultExtension: 'js' };
-			 });
-
-			 var config = {
-			 	baseUrl: '/',
-			 	defaultJSExtensions: true,
-			 	map: map,
-			 	packages: packages
-			 };
-
-			 // filterSystemConfig - index.html's chance to modify config before we register it.
-			 // if (global.filterSystemConfig) { global.filterSystemConfig(config); }
-
-			 System.config(config);
-	    	
-	    	System.import('app/bootstrap').catch(function(err){console.error(err);});
-	    </script>
-	    <!-- <script src="node_modules/rxjs/bundles/Rx.js"></script> -->
-	    <!-- <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-	    <script src="node_modules/angular2/bundles/router.dev.js"></script>
-	    <script src="node_modules/angular2/bundles/http.dev.js"></script> -->
+	  
 	</head>
 	<!-- Display App -->
 	<body>
